apps/arr/qbittorrent/deployment-test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qbittorrent-test
  namespace: arr
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: qbittorrent-test
      app: qbittorrent-test
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: qbittorrent-test
        app: qbittorrent-test
    spec:
#      securityContext:
#        sysctls:
#          - name: net.core.rmem_max
#            value: "4194304"
#          - name: net.core.wmem_max
#            value: "1048576"
      containers:
        - name: python
          image: python
          command:
            - /bin/bash
            - -c
            - |
              apt-get update && \
              apt-get install -y nano zsh transmission transmission-daemon && \
              sh -c "$(curl -fsSL https://raw.githubusercontent.com/ohmyzsh/ohmyzsh/master/tools/install.sh)" && \
              tail -f /dev/null
      volumes:
        - name: gluetun-auth
          configMap:
            name: gluetun-auth
        - name: dnsdist
          configMap:
            name: dnsdist
        - name: config
          hostPath:
            path: /var/mnt/data/persistence/arr/qbittorrent/config-test
            type: DirectoryOrCreate
        - name: downloads
          hostPath:
            path: /var/storage/media/downloads-test
            type: DirectoryOrCreate
