apps/arr/qbittorrent/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qbittorrent
  namespace: arr
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: qbittorrent
      app: qbittorrent
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: qbittorrent
        app: qbittorrent
    spec:
      containers:
        - name: qbittorrent
          image: ghcr.io/linuxserver/qbittorrent:5.0.3-r0-ls379
          ports:
            - name: qbittorrent-web
              containerPort: 8080
#            - name: torrent
#              containerPort: 18863
          volumeMounts:
            - mountPath: /config
              name: config
            - mountPath: /downloads
              name: downloads
            - mountPath: /vuetorrent
              name: vuetorrent
      volumes:
        - name: gluetun-auth
          configMap:
            name: gluetun-auth
        - name: config
          hostPath:
            path: /var/mnt/data/persistence/arr/qbittorrent/config
            type: DirectoryOrCreate
        - name: downloads
          hostPath:
            path: /var/storage/media/downloads
            type: DirectoryOrCreate
        - name: vuetorrent
          hostPath:
            path: /var/mnt/data/persistence/arr/qbittorrent/vuetorrent
            type: DirectoryOrCreate
