apps/arr/qbittorrent/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qbittorrent-ingress
  namespace: arr
  annotations:
    external-dns.alpha.kubernetes.io/target: 192.168.8.222
    traefik.ingress.kubernetes.io/router.entrypoints: local
spec:
  ingressClassName: traefik
  rules:
    - host: torrent.local.boomerok.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: qbittorrent-service
                port:
                  name: qbittorrent-web
  tls:
    - secretName: local-tls
      hosts:
        - torrent.local.boomerok.dev
